[TASK] first Events with jQuery

--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "eCalc",
-  "version": "0.1.0",
-  "main": "main.js",
-  "scripts": {
-    "build:css" : "node-sass --include-path scss scss/main.scss css/main.css",
-    "watch:css" : "npm run build:css -- -w"
-  },
-  "devDependencies": {
-    "node-sass": "^4.5.0"
-  }
+    "name": "ecalc",
+    "version": "0.1.0",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron main.js",
+        "build:css": "node-sass --include-path scss scss/main.scss css/main.css",
+        "watch:css": "npm run build:css -- -w"
+    },
+    "devDependencies": {
+        "bower": "^1.8.0",
+        "node-sass": "^4.5.0"
+    }
 }
